# freebsd-ports

./: GIDs  MOVED  Makefile  UIDs  siva-TODO-DONE.txt
Mk/: bsd.default-versions.mk  bsd.licenses.db.mk  bsd.port.mk
Mk/Features/: mold.mk  pie.mk
Mk/Uses/: cargo.mk  go.mk  gssapi.mk  php.mk  python.mk  zig.mk
archivers/pear-Horde_Compress/: Makefile
archivers/pecl-lzf/: Makefile
archivers/pecl-rar/: Makefile
archivers/php-brotli/: Makefile
archivers/php-horde_lz4/: Makefile
archivers/php-lz4/: Makefile
archivers/php-snappy/: Makefile
archivers/php-zstd/: Makefile
archivers/rvm/: Makefile
astro/gpsd/: Makefile
astro/libnova/: Makefile
audio/amb-plugins/: Makefile
audio/ampache/: Makefile
audio/autotalent/: Makefile
audio/baresip/: Makefile
audio/deadbeef-jack-plugin/: Makefile
audio/deadbeef-mpris2-plugin/: Makefile
audio/deadbeef-musical-spectrum-plugin/: Makefile
audio/deadbeef-playback-status-plugin/: Makefile
audio/deadbeef-quick-search-plugin/: Makefile
audio/deadbeef-spectrogram-plugin/: Makefile
audio/deadbeef-vu-meter-plugin/: Makefile
audio/deadbeef-waveform-seekbar-plugin/: Makefile
audio/gnupod/: Makefile
audio/stk/: Makefile
benchmarks/: Makefile
benchmarks/kcbench/: Makefile  distinfo  pkg-descr  pkg-plist
benchmarks/phoronix-test-suite/: Makefile
benchmarks/polygraph/: Makefile
biology/pyfasta/: Makefile
databases/: Makefile
devel/: Makefile
devel/perfetto/files/: patch-BUILD.gn  patch-src_tracebox_tracebox.cc
empt/: Makefile
graphics/skia/files/: patch-BUILD.gn
sysutils/: Makefile
(+1156 files in other folders)
