--- BUILD.gn.orig	2026-05-01 18:48:52 UTC
+++ BUILD.gn
@@ -198,7 +198,7 @@ if (perfetto_build_standalone) {
     # Checks that the "fake" backend implementations build.
     "src/tracing:client_api_no_backends_compile_test",
   ]
-  if (is_linux || is_android || is_mac) {
+  if (is_linux || is_android || is_mac || is_freebsd) {
     all_targets += [ "src/tracebox" ]
   }
 
